Addressing Codacy findings